Update 'go-gcijpotj' component image to: quay.io/rhtap_qe/go-gcijpotj:e1b2793f84b2c4b28b1867a012bc70395b76d73d@sha256:af4c4ea88d0df4c5eb9e2658eeecc8b5c5c6001eb1f23f54ffabd27167722f26

--- a/components/go-gcijpotj/overlays/development/deployment-patch.yaml
+++ b/components/go-gcijpotj/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-gcijpotj
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-gcijpotj:e1b2793f84b2c4b28b1867a012bc70395b76d73d@sha256:af4c4ea88d0df4c5eb9e2658eeecc8b5c5c6001eb1f23f54ffabd27167722f26
+          name: container-image
